--- a/plactice.html
+++ b/plactice.html
@@ -56,8 +56,11 @@
                 </p>
             </section>
             <div id="shopBanner" class="index_shopBanner">
+                <a href="https://zakuzaku.co.jp/shop/">
+                    <div class="index_shopBanner_link"></div>
+                    <div class="index_shopBanner_link_arrow"></div>
+                </a>
                 <div class="index_shopBanner_mask"></div>
-                <!-- <div class="index_shopBanner_link">SHOP</div> -->
             </div>
             <section id="principles" class="index_principles">
                 <div class="index_principles_title"></div>
@@ -165,6 +168,11 @@
             <section id="shop" class="index_shop">
                 <div class="shop_title"></div>
                 <div class="shop_img">
+                    <a href="https://zakuzaku.co.jp/shop/">
+                        <div class="shop_list_link">SHOP LIST
+                            <div class="shop_list_link_arrow"></div>
+                        </div>
+                    </a>
                     <div class="shop_img_mask"></div>
                 </div>
             </section>
